--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		    <version>2.0.2</version>
 		</dependency>			
+
+		<dependency>
+		    <groupId>com.cloudinary</groupId>
+		    <artifactId>cloudinary-http44</artifactId>
+		    <version>1.39.0</version>
+		</dependency>
 		
 		
 	</dependencies>
