--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 		</dependency>			
 
 		<dependency>
+		 <groupId>org.springframework.boot</groupId>
+		 <artifactId>spring-boot-starter-validation</artifactId>
+<!-- sakın <scope> test <scope>  satırı ekleme. Hiç validation'a girmiyor-->			 
+		</dependency>
+		
+		<dependency>
 		    <groupId>com.cloudinary</groupId>
 		    <artifactId>cloudinary-http44</artifactId>
 		    <version>1.39.0</version>
