Hrms projesinde Refresh Token, handle JWT token expiration implement edildi.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 # App Properties
-bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
-bezkoder.app.jwtExpirationMs=86400000
+bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================BezKoder=Spring===========
+#bezkoder.app.jwtExpirationMs= 3600000
+#bezkoder.app.jwtRefreshExpirationMs= 86400000
+## For test
+bezkoder.app.jwtExpirationMs= 30000
+bezkoder.app.jwtRefreshExpirationMs= 60000
