--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 # App Properties
 bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================BezKoder=Spring===========
-#bezkoder.app.jwtExpirationMs= 3600000
-#bezkoder.app.jwtRefreshExpirationMs= 86400000
+bezkoder.app.jwtExpirationMs= 3600000
+bezkoder.app.jwtRefreshExpirationMs= 86400000
 ## For test
-bezkoder.app.jwtExpirationMs= 30000
-bezkoder.app.jwtRefreshExpirationMs= 60000
+#bezkoder.app.jwtExpirationMs= 30000
+#bezkoder.app.jwtRefreshExpirationMs= 60000
