--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 		    <version>1.39.0</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>jakarta.mail</artifactId>
+		    <version>2.0.1</version>
+		</dependency>
 		
 	</dependencies>
 
