--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.jpa.hibernate.ddl-auto=update
 bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================BezKoder=Spring===========
 bezkoder.app.jwtExpirationMs= 3600000
 bezkoder.app.jwtRefreshExpirationMs= 86400000
+#Email settings
+spring.mail.username=mfcosar@gmail.com
+spring.mail.password=somepassword
 ## For test
 #bezkoder.app.jwtExpirationMs= 30000
 #bezkoder.app.jwtRefreshExpirationMs= 60000
