CandidateEmailVerifications constructor yapısı, generateNewEmailVerificationCode düzeltildi. Gmail app specific password authentication istiyor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ bezkoder.app.jwtExpirationMs= 3600000
 bezkoder.app.jwtRefreshExpirationMs= 86400000
 #Email settings
 spring.mail.username=mfcosar@gmail.com
-spring.mail.password=somepassword
+spring.mail.password=bismillah11
 ## For test
 #bezkoder.app.jwtExpirationMs= 30000
 #bezkoder.app.jwtRefreshExpirationMs= 60000
