Login authentication'da user verified değilse ve expire ettiyse DB'den tamamen silme, verified ise authorization yapıp rollerini ekleme implement edildi.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ bezkoder.app.jwtSecret= ======================BezKoder=Spring===================
 bezkoder.app.jwtExpirationMs= 3600000
 bezkoder.app.jwtRefreshExpirationMs= 86400000
 #Email settings
-spring.mail.username=mfcosar@gmail.com
-spring.mail.password=bismillah11
+spring.mail.username=appSpecificAuthorizationRequired
+spring.mail.password=appSpecificPasswordRequired
 ## For test
 #bezkoder.app.jwtExpirationMs= 30000
 #bezkoder.app.jwtRefreshExpirationMs= 60000
